debugging: fix rhos[i]-->rhos[i,] and optimize prob_alt_prior

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: ARHT
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Adaptable Regularized Hotelling's T^2 test for high-dimensional data
 Version: 0.1.0
 Authors@R: person("Haoran", "Li", email = "hrli@ucdavis.edu",
                   role = c("aut", "cre"))
 Maintainer: Haoran Li <hrli@ucdavis.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
