--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,19 +2,15 @@ Package: ARHT
 Type: Package
 Title: Adaptable Regularized Hotelling's T^2 test for high-dimensional data
 Version: 0.1.0
-Authors@R: c(person("Haoran", "Li", email = "hrli@ucdavis.edu",
-                  role = c("aut", "cre")), 
-             person("Alexander", "Aue", email = "aaue@ucdavis.edu",
-                  role = c("aut")),
-             person("Debashis", "Paul", email = "debpaul@ucdavis.edu",
-                  role = c("aut")))
+Authors@R: person("Haoran", "Li", email = "hrli@ucdavis.edu", role = c("aut", "cre"))
 Maintainer: Haoran Li <hrli@ucdavis.edu>
-Description: Perform the Adaptable Regularized Hotelling's T^2 test (ARHT) proposed by Li et. al., arXiv:1609.08725. 
-     Both one- and two- sample mean test are available with various probabilistic alternative prior models. 
-     It contains a function to consistently estimate higher order moments of the population covariance spectral
-     distribution using the spectral of the sample covariance matrix (Bai et. al. (2010)). In addition, it contains
-     a function to sample from 3-variate chi-squared random vectors approximately with a given correlation matrix 
-     when the degrees of freedom are large. 
+Description: Perform the Adaptable Regularized Hotelling's T^2 test (ARHT) proposed by
+    Li et. al., arXiv:1609.08725. Both one- and two- sample mean test are available with
+    various probabilistic alternative prior models. It contains a function to consistently
+    estimate higher order moments of the population covariance spectral distribution using
+    the spectral of the sample covariance matrix (Bai et. al. (2010)). In addition, it contains
+    a function to sample from 3-variate chi-squared random vectors approximately with a given
+    correlation matrix when the degrees of freedom are large. 
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
