--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Authors@R: person("Haoran", "Li", email = "hrli@ucdavis.edu", role = c("aut", "cre"))
 Maintainer: Haoran Li <hrli@ucdavis.edu>
 Description: Perform the Adaptable Regularized Hotelling's T^2 test (ARHT) proposed by
-    Li et al., arXiv:1609.08725. Both one- and two- sample mean test are available with
+    Li et al., arXiv:1609.08725. Both one-sample and two-sample mean test are available with
     various probabilistic alternative prior models. It contains a function to consistently
     estimate higher order moments of the population covariance spectral distribution using
     the spectral of the sample covariance matrix (Bai et al. (2010)). In addition, it contains
